--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
     border-radius: 50%;
     background-color: var(--light);
 }
-img{
+.img{
     width: 180px;
     height: 180px;
     border-radius: 50%;
@@ -97,9 +97,9 @@ img{
     right: 0;
 }
 .controls{
-    width: 100%;
+    width: 60%;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     margin: auto;
     margin-top: 20px;
@@ -113,8 +113,60 @@ img{
     cursor: pointer;
     border: none;
 }
-.
+.ply_btn span{
+    position: absolute;
+    top: 50%;
+    left: 55%;
+    transform: translateY(-50%);
+    width: 10px ;
+    height: 20px;
+    border-radius: 2px;
+    background: #217ca9;
+    transition: .5s;
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+}
+.ply_btn span:nth-child(2){
+    left: 25%;
+    transform-origin: center;
+}
+.ply_btn.pause span:nth-child(2)
+{
+    transform: translateY(-50%) scaleY(0);
+}
+.ply_btn.pause span:nth-child(1){
+    width: 35%;
+    left: 53%;
+    transform: translate(-50%,-50%);
+    border-radius: 0;
+    clip-path:polygon(0 0, 100% 50%, 100% 50%, 0% 100%);
+}
+.ply_btn.pause{
+    animation: pluse 2s linear infinite;
+}
+@keyframes pluse{
+    0%{
+        box-shadow: 0;
+    }
+    50%{
+        box-shadow: 0 0 0 5px rgba(255, 255, 255, .1);
+    }
+    100%{
+        box-shadow: 0 0 0 5px rgba(255, 255, 255, .5);
 
+    }
+}
+/* btns styles */
+.btn{
+    width: 10px;
+    height: 4px ;
+    background: #ddd;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    cursor: pointer;
+}
 
 
 
