--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@ body{
     font-family: 'Times New Roman', Times, serif;
 }
 .container{
-    width: 30%;
+    position: relative;
+    width: 590px;
     height: 100vh;
     border-radius: 20px;
     background:rgba(255, 255, 255, 0.001);
@@ -28,38 +29,22 @@ body{
     overflow: hidden;
     color: #fff;
 }
-.box{
-    width: 180px;
-    height:180px;
-    background-color: var(--dark);
-    border-radius: 50%;
-    position: relative;
-    display: block;
-
+.img-section{
+    position: absolute;
+    top: 0px;
+    left: 26%;;
 }
-.box-img{
-    width: 180px;
-    height:180px;
+.img-section img{
+    width: 280px;
+    height:280px;
     background-color: var(--dark);
-    margin:auto;
     border-radius: 50%;
     position: relative;
-    background-image: url(/DonyaSoft\ Wallpaper\ \(8\).jpg);
     display: block;
-    margin: 40px auto;
+    margin: 60px auto;
     background-size: cover;
     box-shadow: 0 0 0 10px rgba(255, 255, 255, 0.08);
-}
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    z-index: 100;
-    transform: translate(-50%,-50%);
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    background-color: var(--light);
+    animation: rotate 20s infinite;
 }
 @keyframes rotate{
     100%{
@@ -68,8 +53,8 @@ body{
 }
 .details{
   position: absolute;
-  margin-top: 250px;
-  margin-left: 2.5rem;
+  top: 50%;
+  left: 34%;
 
 }
 
@@ -95,6 +80,7 @@ body{
     background-color: var(--light);
     cursor: pointer;
     overflow: hidden;
+    
 }
 .range-control::-webkit-slider-thumb{
     -webkit-appearance: none;
@@ -117,13 +103,15 @@ body{
     justify-content: space-between;
     align-items: center;
     margin: auto;
-    margin-top: 0px;
+    margin-top: 0 30px;
+    
+
 
 }
 .ply_btn{
     position: relative;
-    width: 60px;
-    height: 60px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
     background-color: hsl(204, 29%, 93%);
     cursor: pointer;
@@ -134,10 +122,10 @@ body{
     top: 50%;
     left: 25%;
     transform: translateY(-50%);
-    width: 10px ;
-    height: 30px;
+    width: 2px ;
+    height: 10px;
     border-radius: 2px;
-    background: #217ca9;
+    background: var(--dark);
     transition: .5s;
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
 }
@@ -190,7 +178,10 @@ body{
         transform: rotate(360deg);
     }
 }
-
+.controls img{
+    width: 40px;
+    height: 40px;
+}
 /* ========================================= MAKING RESPONSVE ================================= */
 @media (min-width:360px){
     .box{
