--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body{
 }
 .container{
     position: relative;
-    width: 590px;
+    width: 80vh;
     height: 100vh;
     border-radius: 20px;
     background:rgba(255, 255, 255, 0.001);
@@ -44,7 +44,7 @@ body{
     margin: 60px auto;
     background-size: cover;
     box-shadow: 0 0 0 10px rgba(255, 255, 255, 0.08);
-    animation: rotate 20s infinite;
+    /* animation: rotate 20s linear infinite; */
 }
 @keyframes rotate{
     100%{
@@ -53,7 +53,7 @@ body{
 }
 .details{
   position: absolute;
-  top: 50%;
+  top: 60%;
   left: 34%;
 
 }
@@ -61,7 +61,7 @@ body{
 /* the song slider styles */
 .song_slider{
     width: 100%;
-    margin: 10px 0;
+    margin: 20px 0;
     position: relative;
 }
 .music_name,.music_artist{
@@ -91,7 +91,6 @@ body{
 }
 .current_time,.duration_time{
     font-size: 1rem;
-
 }
 .duration_time{
     position: absolute;
@@ -103,7 +102,7 @@ body{
     justify-content: space-between;
     align-items: center;
     margin: auto;
-    margin-top: 0 30px;
+    margin-top: 30px 0px;
     
 
 
@@ -120,9 +119,9 @@ body{
 .ply_btn span{
     position: absolute;
     top: 50%;
-    left: 25%;
+    left: 33%;
     transform: translateY(-50%);
-    width: 2px ;
+    width: 4px ;
     height: 10px;
     border-radius: 2px;
     background: var(--dark);
@@ -169,6 +168,11 @@ body{
     align-items: center;
     border: none;
     cursor: pointer;
+    margin-left: -30px;
+    margin-right: -30px;
+}
+.btnNext{
+    margin-left:px ;
 }
 @keyframes rotate{
     0%{
