--- a/style.css
+++ b/style.css
@@ -46,7 +46,10 @@ margin: -350px auto 0 auto;
     margin: 60px auto;
     background-size: cover;
     box-shadow: 1px -1px 40px 17px rgba(52, 198, 200, 0.6);
+}
+.img-section .imgduration{
     animation: rotate 20s linear infinite;
+
 }
 @keyframes rotate{
     100%{
